<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Spice</string>
    <string name="ad_donate_text0">Pro版本对应于多重身份验证。为了防止违法使用，也对应于主密码功能。加上为了防盗包含密码与SSH键的所有连接设定都是加密的。这些都在主菜单内进行设定。如果主菜单按钮不见，请按住在菜单上的应用按钮。</string>
    <string name="ad_donate_text1">如果您购买Pro版本并且同意捐赠我们的话，请点击这里。</string>
    <string name="ad_donate_text2">使用Pro版本时，可以将这个对话框设定为无效，也可以存取追加功能。</string>
    <string name="ad_donate_text3">项目的详细请参照以下客户端应用用链接：</string>
    <string name="ad_donate_text_rdp">Pro版本的aRDP已对应声音重定向！</string>
    <string name="ad_donate_text_spice">Pro版本的aSPICE已对应USB重定向！只要在连接之前安装OTG电缆就行了。</string>
    <string name="address_caption">VNC服务器</string>
    <string name="address_caption_hint">VNC服务器</string>
    <string name="address_caption_hint_tunneled">VNC服务器</string>
    <string name="address_caption_ssh">SSH服务器</string>
    <string name="address_caption_ssh_hint">SSH服务器</string>
    <string name="alt_check">Alt</string>
    <string name="ardp_app_name">aRDP Pro</string>
    <string name="arrow_down">向下箭头</string>
    <string name="arrow_left">向左箭头</string>
    <string name="arrow_right">向右箭头</string>
    <string name="arrow_up">向上箭头</string>
    <string name="aspice_app_name">aSPICE Pro</string>
    <string name="auto">自动</string>
    <string name="auto_x_cancel">取消</string>
    <string name="auto_x_caption">bVNC在Linux/UNIX系统（类似于NX）上自动搜索现有的并创建新的X会话。搜索需要x11vnc，创建会话需要Xvfb、Xvnc或Xdummy。如果连接有问题，请尝试在AutoX高级设置中选择特定的远程会话类型。</string>
    <string name="auto_x_confirm">确认</string>
    <string name="auto_x_descript_geom">远程桌面大小（WxH）</string>
    <string name="auto_x_descript_session">远程会话类型</string>
    <string name="auto_x_disabled">无效</string>
    <string name="auto_x_disabled_selection">AutoX无效</string>
    <string name="auto_x_enabled">有效</string>
    <string name="auto_x_find">只搜索，不创建</string>
    <string name="auto_x_find_login">搜索X登录名（需要sudo）</string>
    <string name="auto_x_geom_custom">自订</string>
    <string name="auto_x_geom_native">原创</string>
    <string-array name="auto_x_geometry">
        <item>@string/auto_x_geom_native</item>
        <item>@string/auto_x_geom_custom</item>
    </string-array>
    <string-array name="auto_x_session">
        <item>@string/auto_x_session_auto</item>
        <item>@string/auto_x_session_custom</item>
        <item>@string/auto_x_session_kde</item>
        <item>@string/auto_x_session_unity</item>
        <item>@string/auto_x_session_unity_2d</item>
        <item>@string/auto_x_session_xfce</item>
        <item>@string/auto_x_session_gnome</item>
        <item>@string/auto_x_session_gnome_cl</item>
        <item>@string/auto_x_session_trinity</item>
        <item>@string/auto_x_session_mate</item>
    </string-array>
    <string name="auto_x_session_auto">自动</string>
    <string name="auto_x_session_custom">自订</string>
    <string name="auto_x_session_gnome">GNOME</string>
    <string name="auto_x_session_gnome_cl">GNOME经典</string>
    <string name="auto_x_session_kde">KDE</string>
    <string name="auto_x_session_mate">MATE</string>
    <string name="auto_x_session_trinity">Trinity</string>
    <string name="auto_x_session_unity">Unity</string>
    <string name="auto_x_session_unity_2d">Unity2D</string>
    <string name="auto_x_session_xfce">Xfce</string>
    <string name="auto_x_title">AutoX设定</string>
    <string-array name="auto_x_type">
        
        <item>@string/auto_x_disabled_selection</item>
        <item>@string/auto_x_xvfb</item>
        <item>@string/auto_x_xvnc</item>
        <item>@string/auto_x_xdummy</item>
        <item>@string/auto_x_find</item>
        <item>@string/auto_x_find_login</item>
    </string-array>
    <string name="auto_x_unix_auth">自动使用给定的SSH用户名／密码进行身份验证（进入黑色的登录画面）</string>
    <string name="auto_x_unixpw">使用UNIX凭据代替内置的安全性机制。用户必须能够运行/bin/su。</string>
    <string name="auto_x_xdummy">使用Xdummy搜索或创建</string>
    <string name="auto_x_xvfb">使用Xvfb搜索或创建</string>
    <string name="auto_x_xvnc">使用Xvnc搜索或创建</string>
    <string name="button_send_text">发送文字</string>
    <string name="button_send_without_saving">发送文字/不保存</string>
    <string name="bvnc_app_name">bVNC Pro</string>
    <string name="center_mouse">鼠标@</string>
    <string name="close">关闭</string>
    <string name="color_format_caption">彩色模式</string>
    <string name="color_mode">彩色模式</string>
    <string name="connect_button">连接</string>
    <string name="connection_caption">连接</string>
    <string-array name="connection_type">
        <item>@string/connection_type_vnc</item>
        <item>@string/connection_type_vnc_over_ssh</item>
        <item>@string/connection_type_ultravnc</item>
        <item>@string/connection_type_vnc_over_ssl</item>
        <item>@string/connection_type_vnc_over_vencrypt</item>
        <item>@string/connection_type_vnc_over_stunnel</item>
    </string-array>
    <string name="connection_type_caption">连接类型</string>
    <string name="connection_type_rdp">RDP</string>
    <string name="connection_type_rdp_over_ssh">通过SSH的RDP</string>
    <string name="connection_type_spice">SPICE</string>
    <string name="connection_type_spice_over_ssh">通过SSH的SPICE</string>
    <string name="connection_type_ultravnc">UltraVNC</string>
    <string name="connection_type_vnc">基本VNC</string>
    <string name="connection_type_vnc_over_ssh">通过SSH的安全VNC</string>
    <string name="connection_type_vnc_over_ssl">通过AnonTLS的安全VNC</string>
    <string name="connection_type_vnc_over_stunnel">通过SSL隧道的安全VNC</string>
    <string name="connection_type_vnc_over_vencrypt">通过VeNCrypt的安全VNC</string>
    <string name="control_check">Ctrl</string>
    <string name="copy_list_button">复制列表</string>
    <string name="ctrl_alt_del">Ctrl-Alt-Del</string>
    <string name="default_input_mode">默认输入模式</string>
    <string name="delete_connection">删除连接设定</string>
    <string name="delete_key">删除所选密钥</string>
    <string name="delete_key_list">删除密钥列表</string>
    <string name="dpad_as_arrows">将D-Pad用于箭头键，将D-Pad单击用于Ctrl。</string>
    <string name="enable_recording">使录像有效</string>
    <string name="enable_sound">使声音有效</string>
    <string name="enter_text">发送文字</string>
    <string name="enter_text_title">输入发送用文字</string>
    <string name="error_anon_dh_unsupported">VNC服务器正在尝试使用匿名Diffie Hellman密码，但您的Android设备不支持的。如果使用GNOME的Vino VNC服务器，就可以通过在终端中运行以下命令然后重新启动来禁用AnonTLS：\" gsettings set org.gnome.Vino require-encryption false \"。如果运行x11vnc，就可以添加以下选项：\"-vencrypt nodh：only -ssl \"。</string>
    <string name="error_connection_failed">连接失败了。</string>
    <string name="error_connection_interrupted">连接被中断。</string>
    <string name="error_no_user_hostname">请输入用户名，以及主机名或IP地址。</string>
    <string name="error_out_of_memory">无法将足够的内存分配给远程屏幕的绘制。请尝试重新启动应用或者设备。您也可以尝试通过应用设置来缩小远程桌面的大小。</string>
    <string name="error_ovirt_unable_to_connect">无法连接或认证，请确认服务器地址，用户名，密码以及CA与主题。</string>
    <string name="error_pick_correct_item">请确认您在\"连接类型\"中选择了正确的项目。</string>
    <string name="error_rdp_authentication_failed">RDP验证失败了！ 请先确认RDP用户名和密码再重试。</string>
    <string name="error_rdp_connection_failed">RDP连接失败了！网络连接被中断或RDP服务器已停止／无效。或者将会话切换到另外用户了。</string>
    <string name="error_rdp_unable_to_connect">无法连接到RDP服务器！请确认RDP服务器设置正确，服务器已上电，RDP已有效以及服务器与该设备位于同一网络上。</string>
    <string name="error_security_type">服务器无法提供对应的安全类型。</string>
    <string name="error_spice_unable_to_connect">无法连接或认证。请确认服务器地址和密码。</string>
    <string name="error_ssh_could_not_exec_command">没能执行远程命令。</string>
    <string name="error_ssh_could_not_send_sudo_pwd">没能发送sudo密码。</string>
    <string name="error_ssh_hostkey_changed">ERROR！服务器主机密钥已更改。如果有意这样做，请删除并重试连接。否则，这可能是中间人的攻击，不能继续。</string>
    <string name="error_ssh_kbd_auth_method_unavail">SSH服务器都不支持\"password\"与\"keyboard-interactive\"这两种认证方式，或者先要执行\"publickey\"方式。请设定为允许这两种方式中的至少一种。或者重新设定本App。有效的认证方式：</string>
    <string name="error_ssh_key_auth_fail">通过密钥对来向SSH服务器认证失败了。请确认SSH用户名，并确认您的公钥在远程端的authorized_keys文件中。</string>
    <string name="error_ssh_keypair_decryption_failure">解密密钥对失败了。请确认您在主画面的\'SSH Passphrase\'字段中正确输入了密码。</string>
    <string name="error_ssh_keypair_missing">尚未创建SSH密钥对！ 请创建它并将它（公钥）放入SSH服务器上的authorized_keys中。</string>
    <string name="error_ssh_passphrase_but_keypair_unencrypted">已创建了密码短语，但密钥对未加密。请删除密码短语。</string>
    <string name="error_ssh_port_forwarding_failure">无法设置为通过SSH隧道连接VNC的端口转发。请确认SSH服务器设置为允许端口转发，然后重试。</string>
    <string name="error_ssh_pubkey_auth_method_unavail">SSH服务器不支持\" publickey \"身份验证方法，我们正在尝试使用密钥对进行身份验证。请设置为允许公钥身份验证，然后重试。可用的身份验证方法：</string>
    <string name="error_ssh_pwd_auth_fail">使用密码对SSH服务器进行身份验证失败了。请确认您的SSH用户名和SSH密码。</string>
    <string name="error_ssh_unable_to_connect">连接SSH服务器失败了。请确认网络连接以及SSH服务器地址和端口。</string>
    <string name="error_ssh_x11vnc_no_port_failure">无法从x11vnc获取远程VNC端口。请确认是否已安装x11vnc。为慎重起见，请尝试在命令行上手动运行x11vnc。</string>
    <string name="error_uri_noinfo_nosave">用于连接的信息不足。</string>
    <string name="error_vnc_authentication">VNC验证失败了！请确认VNC密码和用户名。</string>
    <string name="error_vnc_unable_to_connect">"与VNC服务器的连接失败了，原因如下："</string>
    <string name="error_x509_could_not_generate_encoding">无法生成证书编码。</string>
    <string name="error_x509_could_not_generate_signature">无法生成证书的SHA1或MD5签名。找不到SHA1 / MD5算法。</string>
    <string name="error_connect_timeout">连接超时</string>
    <string name="export_settings">导出</string>
    <string name="export_settings_path" />
    <string name="extra_keys_disable">使特殊键无效</string>
    <string name="extra_keys_enable">使特殊键有效</string>
    <string name="fit_to_screen">适应于屏幕</string>
    <string name="force">全屏位图</string>
    <string name="freeardp_app_name">aRDP Free</string>
    <string name="freeaspice_app_name">aSPICE Free</string>
    <string name="freebvnc_app_name">bVNC Free</string>
    <string name="immersive_mode_disable">禁用沉浸模式</string>
    <string name="import_export_settings">导入／导出设定</string>
    <string name="import_settings">导入</string>
    <string name="import_settings_file_url" />
    <string name="info">信息</string>
    <string name="info_cert_signatures">"证书信息是："</string>
    <string name="info_cert_signatures_identical">\n\n您可以确认信息与服务器证书匹配，以防止中间人攻击。</string>
    <string name="info_cert_tunnel">是否要连接以下证书标识的主机？\n\nFingerprint: %1$s\n\nIssued to:\n%2$s\n\nIssued by:\n%3$s\n\nValid from:\n%4$s\n\nValid until:\n%5$s\n\nNote: The application does not verify certificate authorities or check for certificate revocation.</string>
    <string name="info_continue_connecting">"继续连接到："</string>
    <string name="info_encoding">"编码"</string>
    <string name="info_progress_dialog_aborted">连接被中止！</string>
    <string name="info_progress_dialog_connecting">正在连接…</string>
    <string name="info_progress_dialog_downloading" tools:ignore="TypographyEllipsis">正在下载第一帧。\n请稍候...</string>
    <string name="info_progress_dialog_establishing" tools:ignore="TypographyEllipsis">正在建立握手。\n请稍候...</string>
    <string name="info_ssh_initializing_hostkey">尝试初始化SSH HostKey。</string>
    <string name="info_ssh_key_fingerprint">"主机密钥指纹是："</string>
    <string name="info_ssh_key_fingerprint_identical">\n\n您可以确认它与服务器证书的已知指纹相同，以防止中间人攻击。</string>
    <string name="info_update_color_model_to">"将颜色模型更新为"</string>
    <string name="input_method_direct_drag_pan_description">直接、按住并平移：滑动并拖曳下拉。 一根手指单击相当于鼠标左击，用两根手指单击相当于鼠标右击，再用三根手指单击相当于鼠标中击。 用两根手指滑动即可滚动。 长按即可开始平移。</string>
    <string name="input_method_direct_swipe_pan_description">直接、滑动平移：滑动即可随意平移。 一根手指单击相当于鼠标左击，用两根手指单击相当于鼠标右击，再用三根手指单击相当于鼠标中击。 用两根手指滑动即可滚动。 长按即可拖曳下拉。</string>
    <string name="input_method_single_handed_description">单手操作：滑动即可随意平移。 一根手指单击相当于鼠标左击。长按可选择左击/右击/中击/拖动/滚动/缩放模式。 通常的多点触摸操作也可以使用。</string>
    <string name="key_shift">Shift</string>
    <string name="key_ctrl">Ctrl</string>
    <string name="key_tab">Tab</string>
    <string name="key_esc">Esc</string>
    <string name="key_alt">Alt</string>
    <string name="sys_key" translatable="false">系统键盘</string>
    <string name="disconnect" translatable="false">断开连接</string>
    <string name="desktop_setting">桌面设置</string>
</resources>