<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRemoteMenuList"
    android:layout_width="@dimen/dp_80"
    android:layout_height="@dimen/dp_80"
    android:background="@drawable/bg_menu_radius"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded,UselessParent">

    <!--<TextView
        android:id="@+id/session_touch_pointer"
        style="@style/style_bvnc_float_btn_item"
        android:drawableStart="@mipmap/input_mode"
        android:drawableLeft="@mipmap/input_mode"
        android:text="@string/operator_mode" />-->

    <TextView
        android:id="@+id/session_sys_keyboard"
        style="@style/style_bvnc_float_btn_item"
        android:text="@string/sys_key" />

    <TextView
        android:id="@+id/session_setting"
        style="@style/style_bvnc_float_btn_item"
        android:text="@string/desktop_setting" />

    <TextView
        android:id="@+id/session_disconnect"
        style="@style/style_bvnc_float_btn_item"
        android:text="@string/disconnect" />

</LinearLayout>