<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <com.vesystem.spice.ui.KRemoteCanvas
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />


    <!--特殊键盘-->
    <LinearLayout
        android:id="@+id/llSoftKey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_38"
        android:layout_gravity="bottom"
        android:background="@color/col_blank"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/btnSuper"
            style="@style/style_soft_key_tv">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:src="@mipmap/windows"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <Button
            android:id="@+id/btnShift"
            style="@style/style_soft_key_tv"
            android:text="@string/key_shift"
            android:textAllCaps="false"
            android:textColor="@color/col_white" />

        <Button
            android:id="@+id/btnCtrl"
            style="@style/style_soft_key_tv"
            android:text="@string/key_ctrl"
            android:textAllCaps="false"
            android:textColor="@color/col_white" />

        <Button
            android:id="@+id/btnAlt"
            style="@style/style_soft_key_tv"
            android:text="@string/key_alt"
            android:textAllCaps="false"
            android:textColor="@color/col_white" />

        <Button
            android:id="@+id/btnTab"
            style="@style/style_soft_key_tv"
            android:text="@string/key_tab"
            android:textAllCaps="false"
            android:textColor="@color/col_white" />

        <Button
            android:id="@+id/btnEsc"
            style="@style/style_soft_key_tv"
            android:text="@string/key_esc"
            android:textAllCaps="false"
            android:textColor="@color/col_white" />

        <LinearLayout
            android:id="@+id/btnShowMore"
            style="@style/style_soft_key_tv"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:src="@mipmap/jianp"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/flRemoteMenu"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="right|bottom"
        android:layout_margin="@dimen/dp_40"
        android:background="@drawable/bg_oval_blue"
        android:gravity="center"
        tools:ignore="ContentDescription,RtlHardcoded">

        <ImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_gravity="center"
            android:src="@mipmap/menu" />
    </FrameLayout>
</merge>